add button support

--- a/spec/html/form.html
+++ b/spec/html/form.html
@@ -18,6 +18,8 @@
 				<option value="bus">Bus</option>
 				<option value="bike">Bike</option>
 			</select>
+			<br />
+			<input type="submit" value="submit" name="btn" />
 		</form>
 	</body>
 </html>
